@@ -3,6 +3,8 @@
 - Updated VC cache.
 2021-12-03
 - Enabled listing system vc for authorized users.
+2021-12-08
+- Removed koralQuery and statistics from VC list.
 
 # version 0.64.1
 2021-10-26
